--- a/src/app/loop-pads/loop-pads.component.html
+++ b/src/app/loop-pads/loop-pads.component.html
@@ -1,4 +1,4 @@
-<div class="loop-pads-container">
+<div id="square">
     <div *ngFor="let pad of pads">
         <app-pad [pad]='pad'
                  (onClicked)="onClicked($event)">
