--- a/src/app/loop-pads/loop-pads.component.css
+++ b/src/app/loop-pads/loop-pads.component.css
@@ -1,8 +1,8 @@
-.loop-pads-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 270px;
-    gap: 30px;
+#square{
+    width: 100%;
+    height: 65%;
+    transform:rotate(45deg);
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 15px;
 }
