--- a/src/app/pad/pad.component.css
+++ b/src/app/pad/pad.component.css
@@ -1,21 +1,16 @@
-.container {
-    --dimentions: 60px;
-    width: var(--dimentions);
-    height: var(--dimentions);
+.cell{
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    border:1px solid black;
+    border-radius:8px;
+    box-shadow: 15px 14px 5px -10px rgba(173, 170, 173, 0.4);
+    background-color: red;
     position: relative;
-    display: inline-block;
-    padding: 0;
+
 }
 
-.btn, .background {
-    width: 100%;
-    height: 100%;
+.bi{
+    transform: rotate(-45deg);
+    position: absolute; bottom:30px; left:35px;
 }
-
-.background {
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    transform: rotate(45deg);
-}
-
