--- a/src/app/pad/pad.component.html
+++ b/src/app/pad/pad.component.html
@@ -1,12 +1,5 @@
-
-<div class="container">
-    <button class="btn"
-    (click)="onClick()">
-    <!-- <audio src="" onended=""></audio> -->
-    </button>
-    <div [ngStyle]="{'backgroundColor': getStatusColor()}" class="background"></div>
+<div class="cell"
+     (click)="onClick()"
+     [ngStyle]="{'backgroundColor': getStatusColor()}">
+    <i class={{pad.icon}}></i>
 </div>
-
-
-
-
